21 May 2005:  Menelaos Karavelas
- renamed Degeneracy_testers.h Validity_testers.h
- removed the macro USE_FINITE_EDGES; the conceptual change: infinite Voronoi
  edges and halfedges (which are the duals of infinite Delaunay edges) are no
  longer reported as edges or halfedges.
- redesigned the degeneracy testers/traits to provide regular predicate
  functors instead of constructive predicate functors

19 May 2005:  Menelaos Karavelas
- added types and methods to reach conformity with the concepts