@@ -1,3 +1,22 @@
+// Copyright (c) 2005 University of Crete (Greece).
+// All rights reserved.
+//
+// This file is part of CGAL (www.cgal.org); you may redistribute it under
+// the terms of the Q Public License version 1.0.
+// See the file LICENSE.QPL distributed with CGAL.
+//
+// Licensees holding a valid commercial license may use this file in
+// accordance with the commercial license agreement provided with the software.
+//
+// This file is provided AS IS with NO WARRANTY OF ANY KIND, INCLUDING THE
+// WARRANTY OF DESIGN, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+//
+// $Source$
+// $Revision$ $Date$
+// $Name$
+//
+// Author(s)     : Menelaos Karavelas <mkaravel@tem.uoc.gr>
+
 #ifndef CGAL_VORONOI_DIAGRAM_2_FINDER_CLASSES_H
 #define CGAL_VORONOI_DIAGRAM_2_FINDER_CLASSES_H 1
 
